[gd_scene load_steps=4 format=3 uid="uid://d1rv74cmoep3m"]

[ext_resource type="Script" path="res://scenes/choose_level.gd" id="1_b5map"]
[ext_resource type="Theme" uid="uid://dq3ia55xkg353" path="res://Dedault1.tres" id="1_d6toh"]
[ext_resource type="PackedScene" uid="uid://113s8qejr66d" path="res://BG.tscn" id="2_onh1l"]

[node name="Choose_Level" type="Node"]
script = ExtResource("1_b5map")

[node name="Desert" type="Button" parent="."]
texture_filter = 1
offset_left = 60.0
offset_top = 278.0
offset_right = 306.0
offset_bottom = 375.0
theme = ExtResource("1_d6toh")
text = "Desert"

[node name="GodLand" type="Button" parent="."]
texture_filter = 1
offset_left = 465.0
offset_top = 455.0
offset_right = 711.0
offset_bottom = 552.0
theme = ExtResource("1_d6toh")
text = "GodLand"

[node name="Rainforest" type="Button" parent="."]
texture_filter = 1
offset_left = 846.0
offset_top = 271.0
offset_right = 1092.0
offset_bottom = 368.0
theme = ExtResource("1_d6toh")
text = "Rain forest"

[node name="Forest" type="Button" parent="."]
texture_filter = 1
offset_left = 451.0
offset_top = 87.0
offset_right = 697.0
offset_bottom = 184.0
theme = ExtResource("1_d6toh")
text = "Forest"

[node name="BG" parent="." instance=ExtResource("2_onh1l")]

[connection signal="pressed" from="Desert" to="." method="_on_desert_pressed"]
[connection signal="pressed" from="GodLand" to="." method="_on_god_land_pressed"]
[connection signal="pressed" from="Rainforest" to="." method="_on_rainforest_pressed"]
[connection signal="pressed" from="Forest" to="." method="_on_forest_pressed"]
