extends Node

func _on_desert_pressed():
	get_tree().change_scene_to_file("res://scenes/desert.tscn")


func _on_god_land_pressed():
	pass # Replace with function body.


func _on_rainforest_pressed():
	pass # Replace with function body.


func _on_forest_pressed():
	pass # Replace with function body.
